FRONT - Fix / Fix some mistake

--- a/content/projects/Domap.mdx
+++ b/content/projects/Domap.mdx
@@ -1,6 +1,6 @@
 ---
 title: Domap
-description: Un jeu 2D type Metroidvania réalisé dans le cadre de ma première année de BUT Informatique.
+description: Domap est une plateforme B2B qui fournit des données open data sur les produits d'import et d'export, aidant les entreprises à visualiser les tendances du marché et à optimiser leurs décisions d'achat.
 date: 2023-05-30
 url: https://Domap.fr
 published: true
