Rewrite / -Bold + lazyloading

--- a/content/projects/Keploid.mdx
+++ b/content/projects/Keploid.mdx
@@ -73,6 +73,7 @@ En termes de graphismes, nous avons opté pour un style pixel art. Cependant, n'
       src="/ProjectSoucre/Keploid/Gunslinger Sprite Sheet.gif"
       class="h-48 w-auto mr-4 pixelized"
       alt="Image d'un soldat style 1 er guerre mondiale"
+      loading="lazy"
     />
     <p class="text-sm">Sprite du Personage Principal</p>
   </div>
@@ -81,6 +82,7 @@ En termes de graphismes, nous avons opté pour un style pixel art. Cependant, n'
       src="/ProjectSoucre/Keploid/Hell Bot Dark.gif"
       class="h-48 w-auto ml-4 pixelized"
       alt="Petit robot peint en noir muni d'un fusil laser"
+      loading="lazy"
     />
     <p class="text-sm">Sprite des ennemis</p>
   </div>
@@ -92,6 +94,7 @@ En termes de graphismes, nous avons opté pour un style pixel art. Cependant, n'
     src="/ProjectSoucre/Keploid/DARK Edition Tileset.png"
     class="w-1/2 h-auto mx-auto block pixelized"
     alt="Tileset de sol en pierre noire avec des éléments de flore alien"
+    loading="lazy"
   />
   <p class="text-sm">Le tileset que nous avons choisi pour notre jeu</p>
 </div>
